feat ✨: kratos learn update
